Version History
===============

Version 0.5.18 (unreleased)
---------------------------
* Fix some typos in documentation (#210, thanks @stweil)
* Test against Django 4.1a
* Stopped testing Django < 3.2
* BaseCaptchaTextInput should set autocomplete=off on the hashkey HiddenInput (#201, thanks @eerotal)
* Test against Django 4.2a
* Fix some deprecation warnings in Pillow 9.2+


Version 0.5.17
--------------
* English translation created from Spanish ones (#209, thanks @tpazderka)


Version 0.5.16
--------------
* Adds a migration missing from 0.5.15 (#208, thanks @atodorov)


Version 0.5.15
--------------
* Updated test matrix, drop tests against Python3.6, test against Python3.9
* Remove dependency on six
* Test against Django 4.0a1
* Test with Python 3.10 (Django 3.2 and Django 4.0)
* Remove warning for django 3.2 (#206, thanks @MiStErLu)


Version 0.5.14
--------------
* Generate deterministic CAPTCHA images for each Captcha instance (#194, thanks @mjnaderi)
* New setting CAPTCHA_2X_IMAGE to disable the double resolution image option (#195, thanks @mjnaderi)
* Test against Django 3.2a


Version 0.5.13
--------------
* Fix DeprecationWarnings on Django 3 related to unicode (#173, thanks @jannh)
* Applied black to the codebase and ignored W503
* tox: remove superfluous basepython statement (#172, thanks @devkral)
* i18n: add Persian (fa) language translation files (#190, thanks @mavenium)
* Test Django 2.2, 3.0 and 3.1 on Python 3.6, 3.7 and 3.8 (#171, thanks @devkral)
* Fix deprecation warnings on Django 3.1 (#186, thanks @ jannh and @TheBuky)
* Travis fixes and test on ppc64le arch (#192 and #191, thanks @kishorkunal-raj)


Version 0.5.12
--------------
* Doc: Update url include line for Django (#164, thanks @jpic)
* Doc: Fixed a typo (#162, thanks @RubenGarcia)
* Initial fixes and test against Django 3.0 (#166, #165. Thanks @devkral)
* Don't open dictionary file in binary mode (#167, thanks @grasshoppermouse)


Version 0.5.11
--------------