@@ -6,13 +6,13 @@ from django.db import migrations, models
 class Migration(migrations.Migration):
 
     dependencies = [
-        ('captcha', '0001_initial'),
+        ("captcha", "0001_initial"),
     ]
 
     operations = [
         migrations.AlterField(
-            model_name='captchastore',
-            name='id',
+            model_name="captchastore",
+            name="id",
             field=models.AutoField(primary_key=True, serialize=False),
         ),
     ]
