@@ -1,3 +1,4 @@
 from testproject.settings import *  # noqa
 
+
 FORM_RENDERER = "django.forms.renderers.Jinja2"
